# veda_project1

./: .gitignore  CMakeLists.txt  README.md  addstudentdialog.cpp  addstudentdialog.h  addstudentdialog.ui  admin_window.cpp  admin_window.h  admin_window.ui  adminwindow.cpp  adminwindow.h  adminwindow.ui  client.cpp  client.h  ddddd.cpp  ddddd.h  login.cpp  login.h  login.ui  login_module.cpp  login_module.h  main.cpp  makejson.cpp  sign_up.cpp  sign_up.h  sign_up.ui  sign_up_module.cpp  sign_up_module.h  statuswindow.cpp  statuswindow.h  statuswindow.ui  student_dialog.cpp  student_dialog.h  user.cpp  user.h  user_mainpage.cpp  user_mainpage.h  user_mainpage.ui
qt_project/: CMakeLists.txt  admin_window.cpp  admin_window.h  admin_window.ui  main.cpp  student_dialog.cpp  student_dialog.h
